add: aggiunta main

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--nav -->
         <nav  class="flex">
             <div class="nav-1"></div>
-            <div class="nav-2 nav-1"></div>
+            <div class="nav-2"></div>
         </nav>
         <!-- /nav -->
         <!-- hero -->
@@ -36,18 +36,71 @@
 
     <!-- main -->
     <main>
-        <!-- section-1 -->
-        <!-- /section-1-->
-        <!-- section-2 -->
-        <!-- /section-2 -->
-        <!-- section-3 -->
-        <!-- /section-3 -->
-        <!-- section-4 -->
-        <!-- /section-4 -->
+        <div class="container-1">
+            <!-- section-1 -->
+            <section class="section-main">
+                <h2 class="h2-1">Trova il piano business che fa per te</h2>
+                <input type="radio" name="fatturazione" >
+                <span class="input">Fatturazione mensile</span>
+                <input type="radio" name="fatturazione" >
+                <span>Fatturazione annuale</span>
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+                <div class="enterprise"></div>
+            </section>
+            <!-- /section-1-->
+
+            <!-- section-2 -->
+            <section class="section-main flex-1">
+                <div class="partner-dropbox"></div>
+                <div class="partner-dropbox-1"></div>
+            </section>
+            <!-- /section-2 -->
+
+            <!-- section-3 -->
+            <section class="section-main">
+                <h2 class="h2-1">Esegui più operazioni con Dropbox Business</h2>
+                <div class="row-1">
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                </div>
+            </section>
+            <!-- /section-3 -->
+
+            <!-- section-4 -->
+            <section class="section-main">
+                <div class="section-4"></div>
+            </section>
+            <!-- /section-4 -->
+        </div>
         <!-- section-5 -->
+        <section>
+            <div class="background-brand">
+                <div class="brand"></div>
+                <div class="brand"></div>
+            </div>
+            <div class="free-trial">
+                <div class="container-1 free-trial-3">
+                    <div class="free-trial-1"></div>
+                    <div class="free-trial-2"></div>
+                </div>
+            </div>
+        </section>
         <!-- /section-5 -->
-        <!-- section-6 -->
-        <!-- /section-6 -->
+       <div class="container-1">
+            <!-- section-6 -->
+            <section>
+                <div class="requests"></div>
+            </section>
+            <!-- /section-6 -->
+       </div>
     </main>
     <!--/ main -->
 
