--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -17,18 +18,38 @@
 
         <!--nav -->
         <nav class="flex">
-            <div class="nav-1"></div>
-            <div class="nav-2"></div>
+           <ul class="nav-left">
+                <li><img src="img/logo-small.png" alt=""></li>
+                <li><a class="link-nav" href="">Perchè Dropbox</a></li>
+                <li><a class="link-nav" href="">Funzioni</a></li>
+                <li><a class="link-nav" href="#piani-business">Piani e Prezzi</a></li>
+            </ul>
+          
+            <ul class="nav-right">
+                <li><a class="link-nav" href="#supporto">Supporto</a></li>
+                <li><a class="link-nav" href="">Contatta l'ufficio vendite</a></li>
+                <li><a class="link-nav" href="">Accedi</a></li>
+                <li><a class="link-nav-blue btn-blue" href="">Inizia</a></li>
+            </ul>
         </nav>
         <!-- /nav -->
 
         <!-- hero -->
         <section class="hero">
             <div class="container">
-                <h1>Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h1>
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <section class="section-hero">
-                    <div class="hero-1"></div>
-                    <div class="hero-2"></div>
+                    <div class="hero-1">
+                        <p class="p-hero">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
+                            Dropbox Business è più di uno spazio di arhiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <a class="btn-blue" href=""> Inizia la tua prova gratuita</a>
+                        <p class="p-hero-1">Annulla in qualsiasi momento</p>
+                        <p><i class=" arrow-down fa-solid fa-arrow-down"></i></p>
+                    </div>
+                    <div class="hero-2">
+                        <img src="img/jumbo.png" alt="">
+                    </div>
                 </section>
             </div>
         </section>
@@ -43,6 +64,7 @@
 
             <!-- section-1 -->
             <section class="section-main">
+                <a name="piani-business"></a>
                 <h2 class="h2-1">Trova il piano business che fa per te</h2>
                 <input type="radio" name="fatturazione">
                 <span class="input">Fatturazione mensile</span>
@@ -103,6 +125,7 @@
 
             <!-- section-6 -->
             <section>
+                <a name="supporto"></a>
                 <div class="requests"></div>
             </section>
             <!-- /section-6 -->
