--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <p><i class=" arrow-down fa-solid fa-arrow-down"></i></p>
                     </div>
                     <div class="hero-2">
-                        <img src="img/jumbo.png" alt="">
+                        <img src="img/jumbo.png" alt=" immagine jumbotron">
                     </div>
                 </section>
             </div>
@@ -162,8 +162,16 @@
 
             <!-- section-2 -->
             <section class="section-main flex-1">
-                <div class="partner-dropbox"></div>
-                <div class="partner-dropbox-1"></div>
+                <div class="partner-dropbox">
+                    <img src="img/partner.png" alt="partner">
+                </div>
+                <div class="partner-dropbox-1">
+                    <h4>Entra in contatto con un partner Dropbox</h4>
+                    <p  class="p-partner-dropbox">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <ul>
+                        <li class="btn-black-main"><a class="btn-black" href="">Trova un partner</a></li>
+                    </ul>
+                </div>
             </section>
             <!-- /section-2 -->
 
@@ -171,19 +179,46 @@
             <section class="section-main">
                 <h2 class="h2-1">Esegui più operazioni con Dropbox Business</h2>
                 <div class="row-1">
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
+                    <div class="col-1">
+                        <img src="img/business-feature-switching-tools.png" alt="operazione 1 dropbox business">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p class="operation-dropbox-business">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Ofice e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col-1">
+                        <img src="img/business-feature-send-files-it.png" alt="operazione 2 dropbox business">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p class="operation-dropbox-business">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Ofice e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col-1">
+                        <img src="img/business-feature-coordinate-it.png" alt="operazione 3 dropbox business">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p class="operation-dropbox-business">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Ofice e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col-1">
+                        <img src="img/business-feature-integrations-it.png" alt="operazione 4 dropbox business">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p class="operation-dropbox-business">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Ofice e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col-1">
+                        <img src="img/business-feature-multi-device.png" alt="operazione 5 dropbox business">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p class="operation-dropbox-business">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Ofice e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col-1">
+                        <img src="img/business-feature-security.png" alt="operazione 6 dropbox business">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p class="operation-dropbox-business">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Ofice e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
                 </div>
             </section>
             <!-- /section-3 -->
 
             <!-- section-4 -->
             <section class="section-main">
-                <div class="section-4"></div>
+                <div>
+                    <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
+                    <p class="information-our-clients"><a href="">Scopri di più sui nostri clienti</a></p>
+                </div>
             </section>
             <!-- /section-4 -->
         </div>
