add: aggiunta sezione brand

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <section class="section-main">
                 <div>
                     <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
-                    <p class="information-our-clients"><a href="">Scopri di più sui nostri clienti</a></p>
+                    <p class="information-our-clients"><a href="">Scopri di più sui nostri clienti</a></p>>
                 </div>
             </section>
             <!-- /section-4 -->
@@ -226,13 +226,44 @@
         <!-- section-5 -->
         <section>
             <div class="background-brand">
-                <div class="brand"></div>
-                <div class="brand"></div>
+                <div class="row-3">
+                    <div class="brand">
+                        <div class="row-2">
+                            <div class=" card-1 col-2"><img class="invert" src="img/designit.svg" alt="brand-1"></div>
+                            <div class=" card-2 col-2"><img class="invert" src="img/arizona_state_university.svg" alt="brand-2"></div>
+                            <div class=" card-3 col-2"><img class="invert" src="img/university_of_florida.svg" alt="brand-3"></div>
+                            <div class=" card-4 col-2"><img class="invert" src="img/topps.svg" alt="brand-4"></div>
+                        </div>
+                    </div>
+                    <div class=" central-card brand">
+                        <div class="container-3">
+                            <img class="logo-designit" src="img/designit.svg" alt="logo designit">
+                            <hr class="hr-designit">
+                            <p class=" p-designit">"I membri del nostro team lavorano constantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropboc Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+                            <p class="p-designit">Morten Thomsen, Global IT Lead</p>
+                        </div>
+                    </div>
+                    <div class="brand">
+                        <div class="row-2">
+                            <div class=" card-5 col-2"><img class="invert" src="img/world_bicycle_relief.svg" alt="brand-5"></div>
+                            <div class=" card-6 col-2"><img class="invert" src="img/hearst_corp.svg" alt="brand-6"></div>
+                            <div class=" card-7 col-2"><img class="invert" src="img/lonely_planet.svg" alt="brand-7"></div>
+                            <div class=" card-8 col-2"><img class="invert" src="img/clear_channel.svg" alt="brand-8"></div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
             <div class="free-trial">
                 <div class="container-1 free-trial-3">
-                    <div class="free-trial-1"></div>
-                    <div class="free-trial-2"></div>
+                    <div class="free-trial-1">
+                        <h2 class="h2-brand">Porta Dropbox Business <br> nella tua azienda.</h2>
+                    </div>
+                    <div class="free-trial-2">
+                        <ul>
+                            <li class="btn-white-main"><a class="btn-white" href="">Inizia la tua prova gratuita</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
