add: aggiunta sezione FAQ e termine main

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                             </li>
                         </ul>
                         <p class="p-hero-1">Annulla in qualsiasi momento</p>
-                        <p><i class=" arrow-down fa-solid fa-arrow-down"></i></p>
+                        <ul>
+                            <li class="li-arrow-down"><a href="#piani-business"><i class=" arrow-down fa-solid fa-arrow-down"></i></a></li>
+                         </ul>
                     </div>
                     <div class="hero-2">
                         <img src="img/jumbo.png" alt=" immagine jumbotron">
@@ -217,7 +219,7 @@
             <section class="section-main">
                 <div>
                     <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
-                    <p class="information-our-clients"><a href="">Scopri di più sui nostri clienti</a></p>>
+                    <p class="information-our-clients"><a href="">Scopri di più sui nostri clienti</a></p>
                 </div>
             </section>
             <!-- /section-4 -->
@@ -273,11 +275,64 @@
             <!-- section-6 -->
             <section>
                 <a name="supporto"></a>
-                <div class="requests"></div>
+                <div class="requests">
+                    <h2 class="h2-faq">Domande frequenti</h2>
+                    <hr class="hr-faq"> 
+                    <ul class="flex-faq">
+                        <li>
+                            <a class="color-faq" href="">
+                                <div class="pop-up-faq">
+                                    <span class="answers-faq">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                    <span class="angle-down answers-faq padding-angle-down"><i class="fa-solid fa-angle-down"></i></span>
+                                    <span class=" angle-up answers-faq padding-angle-down"><i class="fa-solid fa-angle-up"></i></span>
+                                </div>
+
+                                <div class="pop-up-faq-1">
+                                    <span class="answers-faq">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, architecto. Sint dicta recusandae delectus, laboriosam fugiat a minus consectetur amet provident porro. Recusandae corporis possimus explicabo enim itaque maiores quidem.</span>
+                                </div>
+                            </a>
+                        </li>
+                        
+                    </ul>
+
+                    <hr class="hr-faq"> 
+                    <ul class="flex-faq">
+                        <li>
+                            <a class="color-faq" href="">
+                                <div class="pop-up-faq">
+                                    <span class="answers-faq">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                    <span class="angle-down answers-faq padding-angle-down"><i class="fa-solid fa-angle-down"></i></span>
+                                    <span class=" angle-up answers-faq padding-angle-down"><i class="fa-solid fa-angle-up"></i></span>
+                                </div>
+
+                                <div class="pop-up-faq-1">
+                                    <span class="answers-faq">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, architecto. Sint dicta recusandae delectus, laboriosam fugiat a minus consectetur amet provident porro. Recusandae corporis possimus explicabo enim itaque maiores quidem.</span>
+                                </div>
+                            </a>
+                        </li>
+                        
+                    </ul>
+
+                    <hr class="hr-faq"> 
+                    <ul class="flex-faq">
+                        <li>
+                            <a class="color-faq" href="">
+                                <div class="pop-up-faq">
+                                    <span class="answers-faq">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                    <span class="angle-down answers-faq padding-angle-down"><i class="fa-solid fa-angle-down"></i></span>
+                                    <span class=" angle-up answers-faq padding-angle-down"><i class="fa-solid fa-angle-up"></i></span>
+                                </div>
+
+                                <div class="pop-up-faq-1">
+                                    <span class="answers-faq">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, architecto. Sint dicta recusandae delectus, laboriosam fugiat a minus consectetur amet provident porro. Recusandae corporis possimus explicabo enim itaque maiores quidem.</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <!-- /section-6 -->
-
-        </div>
+         </div>
     </main>
     <!--/ main -->
 
