add: aggiunta footer, piccole modifiche in tutta la pagina e termine progetto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="flex">
             <ul class="nav-left">
                 <li><img src="img/logo-small.png" alt=""></li>
-                <li><a class="link-nav" href="">Perchè Dropbox</a></li>
+                <li><a class="link-nav padding-left-dropbox-logo" href="">Perchè Dropbox</a></li>
                 <li><a class="link-nav" href="">Funzioni</a></li>
                 <li><a class="link-nav" href="#piani-business">Piani e Prezzi</a></li>
             </ul>
@@ -31,7 +31,7 @@
                 <li><a class="link-nav" href="#supporto">Supporto</a></li>
                 <li><a class="link-nav" href="">Contatta l'ufficio vendite</a></li>
                 <li><a class="link-nav" href="">Accedi</a></li>
-                <li class="btn-blue-hero"><a class="btn-blue" href="">Inizia</a></li>
+                <li class=" btn btn-blue-hero"><a class="btn-blue" href="">Inizia</a></li>
             </ul>
         </nav>
         <!-- /nav -->
@@ -48,7 +48,7 @@
                             integrato per ottimizzare il flusso di lavoro esistente.
                         </p>
                         <ul>
-                            <li class="btn-blue-hero-main"><a class="btn-blue" href=""> Inizia la tua prova gratuita</a>
+                            <li class=" btn btn-blue-hero-main"><a class="btn-blue" href=""> Inizia la tua prova gratuita</a>
                             </li>
                         </ul>
                         <p class="p-hero-1">Annulla in qualsiasi momento</p>
@@ -91,7 +91,7 @@
                             <p class="p-cost-plan-2"><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</p>
                             <p class="p-cost-plan-2"><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice <br> e sicura</p>
                             <ul>
-                                <li class=" btn-plan-business btn-blue-hero-main"><a    class="btn-blue" href="">Prova gratuita per 30 giorni</a></li>
+                                <li class=" btn btn-plan-business btn-blue-hero-main"><a    class="btn-blue" href="">Prova gratuita per 30 giorni</a></li>
                             </ul>
                             <p>oppure <a href="">acquista ora</a></p>
                             <hr class="hr-business-plan">
@@ -111,7 +111,7 @@
                             <p class="p-cost-plan-2"><i class="fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo team</p>
                             <p class="p-cost-plan-2"><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</p>
                             <ul>
-                                <li class=" btn-plan-business btn-blue-hero-main"><a class="btn-blue" href="">Prova gratuita per 30 giorni</a></li>
+                                <li class="btn btn-plan-business btn-blue-hero-main"><a class="btn-blue" href="">Prova gratuita per 30 giorni</a></li>
                             </ul>
                             <p>oppure <a href="">acquista ora</a></p>
                             <hr class="hr-business-plan">
@@ -134,7 +134,7 @@
                             <p class="p-cost-plan-2"><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la tua azienda</p>
                             <p class="p-cost-plan-2"><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</p>
                             <ul>
-                                <li class=" btn-plan-business btn-blue-hero-main"><a class="btn-blue" href="">Contattaci</a></li>
+                                <li class=" btn btn-plan-business btn-blue-hero-main"><a class="btn-blue" href="">Contattaci</a></li>
                             </ul>
                             <p>oppure <a href="">acquista ora</a></p>
                             <hr class="hr-business-plan">
@@ -152,7 +152,7 @@
                         <div class="flex-enterprise">
                             <h4>Enterprise</h4>
                             <ul>
-                                <li class="btn-blue-hero-main"><a class="btn-blue" href="">Contatta l'ufficio vendite</a></li>
+                                <li class="btn btn-blue-hero-main"><a class="btn-blue" href="">Contatta l'ufficio vendite</a></li>
                             </ul>
                         </div>
                         <p class="contact-sales-office"><strong>Contatta l'ufficio vendite per i prezzi</strong></p>
@@ -282,7 +282,7 @@
                         <li>
                             <a class="color-faq" href="">
                                 <div class="pop-up-faq">
-                                    <span class="answers-faq">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                    <span class="answers-faq"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></span>
                                     <span class="angle-down answers-faq padding-angle-down"><i class="fa-solid fa-angle-down"></i></span>
                                     <span class=" angle-up answers-faq padding-angle-down"><i class="fa-solid fa-angle-up"></i></span>
                                 </div>
@@ -300,7 +300,7 @@
                         <li>
                             <a class="color-faq" href="">
                                 <div class="pop-up-faq">
-                                    <span class="answers-faq">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                    <span class="answers-faq"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></span>
                                     <span class="angle-down answers-faq padding-angle-down"><i class="fa-solid fa-angle-down"></i></span>
                                     <span class=" angle-up answers-faq padding-angle-down"><i class="fa-solid fa-angle-up"></i></span>
                                 </div>
@@ -318,7 +318,7 @@
                         <li>
                             <a class="color-faq" href="">
                                 <div class="pop-up-faq">
-                                    <span class="answers-faq">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                    <span class="answers-faq"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></span>
                                     <span class="angle-down answers-faq padding-angle-down"><i class="fa-solid fa-angle-down"></i></span>
                                     <span class=" angle-up answers-faq padding-angle-down"><i class="fa-solid fa-angle-up"></i></span>
                                 </div>
@@ -329,6 +329,7 @@
                             </a>
                         </li>
                     </ul>
+                    <hr class="hr-faq">
                 </div>
             </section>
             <!-- /section-6 -->
@@ -342,11 +343,56 @@
         <div class="container">
             <!-- section-1-->
             <section class="section-footer">
-                <div class="col-footer"></div>
-                <div class="col-footer"></div>
-                <div class="col-footer"></div>
-                <div class="col-footer"></div>
-                <div class="col-footer"></div>
+                <div class="col-footer">
+                    <h5 class="titles-footer">Dropbox</h5>
+                    <ul>
+                        <li class="list-footer"><a class="connections" href="">Applicazione desktop</a></li>
+                        <li class="list-footer"><a class="connections" href="">Perchè Dropbox</a></li>
+                        <li class="list-footer"><a class="connections" href="">Piani</a></li>
+                        <li class="list-footer"><a class="connections" href="">Sicurezza</a></li>
+                        <li class="list-footer"><a class="connections" href="">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-footer">
+                    <h5 class="titles-footer">Prodotti</h5>
+                    <ul>
+                        <li class="list-footer"><a class="connections" href="">Applicazione desktop</a></li>
+                        <li class="list-footer"><a class="connections" href="">Perchè Dropbox</a></li>
+                        <li class="list-footer"><a class="connections" href="">Piani</a></li>
+                        <li class="list-footer"><a class="connections" href="">Sicurezza</a></li>
+                        <li class="list-footer"><a class="connections" href="">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-footer">
+                    <h5 class="titles-footer">Azienda</h5>
+                    <ul>
+                        <li class="list-footer"><a class="connections" href="">Applicazione desktop</a></li>
+                        <li class="list-footer"><a class="connections" href="">Perchè Dropbox</a></li>
+                        <li class="list-footer"><a class="connections" href="">Piani</a></li>
+                        <li class="list-footer"><a class="connections" href="">Sicurezza</a></li>
+                        <li class="list-footer"><a class="connections" href="">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-footer">
+                    <h5 class="titles-footer">Supporto</h5>
+                    <ul>
+                        <li class="list-footer"><a class="connections" href="">Applicazione desktop</a></li>
+                        <li class="list-footer"><a class="connections" href="">Perchè Dropbox</a></li>
+                        <li class="list-footer"><a class="connections" href="">Piani</a></li>
+                        <li class="list-footer"><a class="connections" href="">Sicurezza</a></li>
+                        <li class="list-footer"><a class="connections" href="">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-footer">
+                    <h5 class="titles-footer">Community</h5>
+                    <ul>
+                        <li class="list-footer"><a class="connections" href="">Applicazione desktop</a></li>
+                        <li class="list-footer"><a class="connections" href="">Perchè Dropbox</a></li>
+                        <li class="list-footer"><a class="connections" href="">Piani</a></li>
+                        <li class="list-footer"><a class="connections" href="">Sicurezza</a></li>
+                        <li class="list-footer"><a class="connections" href="">Funzioni</a></li>
+                    </ul>
+                </div>
 
             </section>
             <!-- /section-1 -->
@@ -355,7 +401,11 @@
 
             <!-- section-2 -->
             <section class="language">
-                <div class="select-language"></div>
+                <div class="select-language">
+                    <span class="padding-language"><i class="fa-solid fa-earth-americas"></i></span>
+                    <span class="padding-language">Italiano</span>
+                    <span><i class="fa-solid fa-caret-up"></i></span>
+                </div>
             </section>
             <!-- /section-2 -->
         </div>
