update: modifica sezione <selezione piano business> modifica sugli input type radio

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <section class="section-main">
                 <a name="piani-business"></a>
                 <h2 class="h2-1">Trova il piano business che fa per te</h2>
-                <input type="radio" name="fatturazione" value="Fatturazione mensile">
+                <input type="radio" name="fatturazione" id="Fatturazione mensile" value="Fatturazione mensile">
                 <label class="input" for="Fatturazione mensile">Fatturazione mensile</label>
-                <input type="radio" name="fatturazione" value="Fatturazione annuale">
+                <input type="radio" name="fatturazione" id="Fatturazione annuale" value="Fatturazione annuale">
                 <label for="Fatturazione annuale">Fatturazione annuale</label>
                 <div class="row">
                     <div class="col">
